# vcpkg-test

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
